--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </p>
 
         <ul class="compact">
-          <li><a href="http://web.1576.ru/">Хочу скорее залогиниться!</a></li>
+          <li><a href="http://https://suka-blyadskaya.vercel.app/">Хочу скорее залогиниться!</a></li>
           <li><a href="http://1576dotru.github.io/what">Самые частые вопросы</a></li>
           <li><a href="http://t.me/updates1576">Телеграм-канал с апдейтами</a></li>
           <li><a href="http://1576dotru.github.io/buy">Хочу купить этот домен, что для этого нужно?</a></li>
