--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
           <li><a href="http://1576dotru.github.io/what">Самые частые вопросы</a></li>
           <li><a href="http://t.me/updates1576">Телеграм-канал с апдейтами</a></li>
           <li><a href="http://1576dotru.github.io/buy">Хочу купить этот домен, что для этого нужно?</a></li>
+          <!-- Бонус для любителей читать исходники. Просто убери комментарии и посмотри на магию -->
+          <!-- <li><a href="http://paint.1576.ru/">Pисовалка</a></li> -->
+          <!-- <li><a href="http://notes.1576.ru/">Заметки</a></li> -->
+          <!-- <li><a href="http://nudes.1576.ru/">Нюдсы автора</a></li>
+          <!-- <li><a href="http://1576dotru.github.io/roberto">Отправить Роберта в Китай</a></li>
         </ul>
       </r-cell>
     </r-grid>
