--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
           <!-- <li><a href="http://paint.1576.ru/">Pисовалка</a></li> -->
           <!-- <li><a href="http://notes.1576.ru/">Заметки</a></li> -->
           <!-- <li><a href="http://nudes.1576.ru/">Нюдсы автора</a></li>
-          <!-- <li><a href="http://1576dotru.github.io/roberto">Отправить Роберта в Китай</a></li>
+          <!-- <li><a href="http://1576dotru.github.io/roberto">Отправить Роберта в Китай</a></li> -->
         </ul>
       </r-cell>
     </r-grid>
   <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194" integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon='{"rayId":"7418925b1f42b94a","version":"2022.8.0","r":1,"token":"cabc6b9140b541869829787f7d39523c","si":100}' crossorigin="anonymous"></script>
+  <!-- Неужели читать исходники это настолько интересно? Лучше нашёл бы себе девушку, а лучше двушку и желательно в Москве, а то так соскуфишься же вообще. -->
 </body>
 </html>
